fix: poster preview black screen and download distortion - remove flex centering, fix html2canvas transform issue

--- a/css/main.css
+++ b/css/main.css
@@ -1062,10 +1062,8 @@ img {
 #poster-preview {
   width: 100%;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #000;
+  position: relative;
+  background: transparent;
 }
 
 #poster-preview .poster-container {
